# gh-release-to-r2

./: Cargo.toml
.github/workflows/: release.yaml  release.yml
src/: config.rs  main.rs
