[package]
name = "gh-release-to-r2"
version = "0.2.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.117.0"
futures-util = "0.3.31"
octocrab = { version = "0.48.1", features = [
  "default-client",
  "follow-redirect",
  "retry",
  "rustls",
  "rustls-aws-lc-rs",
  "stream",
  "timeout",
  "tracing",
], default-features = false }
reqwest = { version = "0.12.26", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
