[package]
name = "gh-release-to-r2"
version = "0.3.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.118.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
octocrab = { version = "0.49.3", features = [
  "default-client",
  "follow-redirect",
  "retry",
  "rustls",
  "rustls-aws-lc-rs",
  "jwt-aws-lc-rs",
  "stream",
  "timeout",
  "tracing",
], default-features = false }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
